refactor: 컬렉션 불변성과 방어적 복사 수정
생성자에서 컬렉션을 받을 때 혹은 컬렉션을 반환할 때 외부에서 변경을
방지하고자 방어적 복사,불변성이 필요하기 때문에
해당하는 부분들을 모두 수정하였다.